# telegram-reels-pipeline

./: .gitignore  CLAUDE.md  README.md
telegram-reels-pipeline/: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml
telegram-reels-pipeline/agents/content-creator/: agent.md  description-style-guide.md  hashtag-strategy.md
telegram-reels-pipeline/agents/delivery/: agent.md  message-templates.md
telegram-reels-pipeline/agents/ffmpeg-engineer/: agent.md  crop-failure-modes.md  crop-playbook.md  encoding-params.md
telegram-reels-pipeline/agents/layout-detective/: agent.md  escalation-protocol.md  frame-analysis.md
telegram-reels-pipeline/agents/qa/: agent.md
telegram-reels-pipeline/agents/research/: agent.md  metadata-extraction.md
telegram-reels-pipeline/agents/router/: agent.md  elicitation-flow.md  revision-interpretation.md
telegram-reels-pipeline/agents/transcript/: agent.md  moment-selection-criteria.md
telegram-reels-pipeline/config/: crop-strategies.yaml  pipeline.yaml  quality-gates.yaml  telegram-reels-pipeline.service
telegram-reels-pipeline/scripts/: benchmark_styles.py  check_upscale_quality.py  detect_faces.py  dry_run.py  generate_style_previews.py  ocr_screen_share.py  parse_vtt_speakers.py  run_cli.py
telegram-reels-pipeline/src/pipeline/: smoke_test.py
telegram-reels-pipeline/tests/: conftest.py
telegram-reels-pipeline/tests/integration/: test_file_state_store.py  test_pipeline_end_to_end.py
telegram-reels-pipeline/tests/unit/: test_cli_cutaway.py  test_content_creator_output.py
telegram-reels-pipeline/workflows/revision-flows/: revision-add-context.md  revision-different-moment.md  revision-extend-moment.md  revision-fix-framing.md
(+286 files in other folders)
