[project]
name = "telegram-reels-pipeline"
version = "0.1.0"
description = "Autonomous AI-powered pipeline that transforms YouTube podcast episodes into Instagram Reels via Telegram"
authors = [
    {name = "Pedro"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-telegram-bot (>=22.6,<23.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "opencv-python-headless (>=4.8)"
]


[[tool.poetry.packages]]
include = "pipeline"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "types-aiofiles (>=25.1.0.20251011,<26.0.0.0)"
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C901", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/pipeline --cov-report=term-missing --cov-fail-under=80"
